# aevum

./: .clang-format  .clang-format-ignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  build.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  stale.yml
aevum_logic/: Cargo.toml  rustfmt.toml
aevum_logic/src/: engine.rs  lib.rs  operators.rs
aevum_logic/tests/: engine_pipeline.rs  test_ffi_full_query_lifecycle.rs  test_ffi_numeric_range_operators.rs
docs/: BUILDING.md  DEVELOPMENT.md  GETTING_STARTED.md  GITHUB_CONFIG.md  README.md  SCRIPTS.md  SHELL_REFERENCE.md  index.md  testing.md
include/aevum/ffi/: rust_adapter.hpp
include/aevum/infra/: id_generator.hpp  logger.hpp  scheduler.hpp  string.hpp
include/aevum/network/: handler.hpp  server.hpp
include/aevum/storage/: db.hpp  engine.hpp
scripts/: lint.sh
scripts/lint/: lint.sh
src/: main.cpp
src/aevum/: main.cpp
src/aevum/client/net/: server.cpp  server.hpp
src/aevum/db/storage/: wiredtiger_store.cpp
src/aevum/ffi/: Cargo.toml
src/aevum/shell/: main.cpp
src/aevum/shell/parser/: command_parser.cpp
src/aevum/shell/repl/: repl.cpp
src/aevum/util/deduplication/: request_cache.hpp
src/ffi/: rust_adapter.cpp
src/infra/: id_generator.cpp  logger.cpp  scheduler.cpp  string.cpp
src/network/: handler.cpp  server.cpp
src/storage/: db.cpp  engine.cpp
tests/: CMakeLists.txt  ffi_test.cpp  framework.hpp  handler_test.cpp  infra_test.cpp  main_test.cpp  storage_test.cpp
